# titan-trading-system

./: .depcheckrc.json  .dependency-cruiser.js  .dockerignore  .env.example  .gitignore  .markdownlint.json  .railwayignore  404.html  AGENTS.md  CONTRIBUTING_QA.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  GEMINI.md  Makefile  RAILWAY_DEPLOYMENT.md  README.md  SECURITY.md  TITAN_FRONTEND_TRANSFORMATION_PLAN.md  ai_quant_logs.txt  all_md_files.txt  all_md_files_v2.txt  check_nats.js  complexity_report.md  depcheck_report.txt  deploy-staging.sh  deploy-to-digitalocean.sh  deploy-to-railway.sh  dispatch-start.js  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.micro.yml  docker-compose.prod.yml  docker-compose.secrets.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  docs_inventory.txt  ecosystem.config.js  eslint.config.mjs  failure_log.txt  (+31 more)
.deployment-configs/: current-deploy-1767474608.env  current-deploy-1768594835.env  current-deploy-1768594881.env  current-deploy-1768594913.env  current-deploy-1768595035.env
.do/: app.yaml
.github/: CODEOWNERS  ai-doc-config.yaml  dependabot.yml
.shared/: ui-ux-pro-max
ARCHITECTURE/: index.html
CONTRIBUTING/: index.html
DEPLOYMENT/: index.html
OPERATIONS/: index.html
REPO_PURGE_LEDGER/: index.html
RUNBOOK/: index.html
SECURITY/: index.html
SOTA_QUALITY/: index.html
START_HERE/: index.html
ai-readme/: index.html
api/: index.html
architecture/: index.html
artifacts/: railway-investigation.md
audit/: reliability_audit_jan_2026.md  simulation_replay_audit_jan_2026.md
config/: brain.config.json  disaster-recovery-testing.config.json  disaster-recovery.config.json  hot-standby.config.json  infrastructure.config.json  nats-entrypoint.sh  nats.conf  nats.conf.template  phase1.config.json  redis-secure.conf  titan-brain.config.json  traefik_dynamic.yml
contracts/: index.html  nats-intent.v1.schema.json
deployment-standard/: index.html
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCS_AUDIT_REPORT.md  FRONTEND_INTEGRATION.md  OPERATIONS.md  PRODUCTION_CHECKLIST.md  README.md  REPO_PURGE_LEDGER.md  RUNBOOK.md  SECURITY.md  START_HERE.md  (+18 more)
services/titan-execution-rs/: .dockerignore  Cargo.toml  Dockerfile  README.md  audit.toml  build.rs  check_output.txt  check_output_2.txt  check_output_3.txt  golden_dataset.jsonl  listen-trades.js  package.json  regression_suite.sh  system.halt  test-nats-pub.js
services/titan-execution-rs/.cargo/: audit.toml
services/titan-execution-rs/scripts/: benchmark_nats_latency.mjs
services/titan-execution-rs/src/: adapter.rs  api.rs  armed_state.rs  auth_middleware.rs  circuit_breaker.rs  config.rs  context.rs  contracts.rs  dex_validator.rs  drift_detector.rs  execution_constraints.rs  exposure.rs  impact_calculator.rs  intent_validation.rs  lib.rs  main.rs  metrics.rs  model.rs  nats_engine.rs  order_fsm.rs  order_manager.rs  performance.rs  pipeline.rs  rate_limiter.rs  replay_engine.rs  replay_model.rs  risk_guard.rs  risk_policy.json  risk_policy.rs  risk_state_manager.rs  security.rs  shadow_state.rs  simulation_engine.rs  sre.rs  staleness.rs  subjects.rs  tests.rs
services/titan-execution-rs/src/adapters/: binance.rs
services/titan-execution-rs/src/engine/: state_machine.rs
services/titan-execution-rs/src/exchange/: adapter.rs  binance.rs  bybit.rs  coinbase.rs  cryptocom.rs  curve.rs  dex_utils.rs  dydx.rs  gateio.rs  gmx.rs  hyperliquid.rs  jupiter.rs  kraken.rs  kucoin.rs  mexc.rs  mod.rs  okx.rs  pancakeswap.rs  router.rs  sushiswap.rs  uniswap.rs
services/titan-execution-rs/src/market_data/: connector.rs  engine.rs  mod.rs  model.rs  orderbook_manager.rs  types.rs
services/titan-execution-rs/src/market_data/binance/: connector.rs  message.rs
services/titan-execution-rs/src/market_data/bybit/: connector.rs  message.rs  mod.rs
services/titan-execution-rs/src/market_data/hyperliquid/: connector.rs  message.rs
services/titan-execution-rs/src/market_data/mexc/: connector.rs  message.rs  mod.rs
services/titan-execution-rs/src/persistence/: mod.rs  redb_store.rs  store.rs  wal.rs
services/titan-execution-rs/tests/: circuit_breaker_test.rs  integration_nats.rs  recovery_test.rs  replay_compliance.rs  risk_enforcement_test.rs  risk_policy_compat_test.rs  security_test.rs  shadow_aggregation_test.rs  testnet_validation.rs
services/titan-execution-rs/tests/fixtures/: golden_invalid.jsonl  golden_v1.jsonl
(+3437 files in other folders)
