[package]
name = "titan-execution-rs"
version = "0.1.0"
edition = "2021"
authors = ["Titan Team"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-nats = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
dotenv = "0.15"
futures = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde-with-float"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
actix-web = "4"
actix-cors = "0.7"
async-trait = "0.1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

reqwest = "0.13.1"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
url = "2.5.8"
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1.33"
