[package]
name = "titan-execution-rs"
version = "0.1.0"
edition = "2021"
authors = ["Titan Team"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-nats = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
config = { version = "0.15", default-features = false, features = [
    "toml",
    "json",
    "ini",
] }
dotenv = "0.15"
futures = "0.3"
uuid = { version = "1.7", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde-with-float", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
actix-web = "4"
actix-cors = "0.7"
async-trait = "0.1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
redb = "1.5.0"
rmp-serde = "1.1"

reqwest = { version = "0.11", features = ["json", "blocking"] }
hmac = "0.12.1"
sha2 = "0.10.9"
rust_decimal_macros = "1.33"
hex = "0.4.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
dydx = "0.3.0"
base64 = "0.22"
bs58 = "0.5"
ethers = { version = "2.0", features = ["ws", "rustls"] }
url = "2.5.8"
dashmap = "5.5"
parking_lot = "0.12"
actix-web-prom = "0.10.0"
prometheus = "0.14"
once_cell = "1.19"

# High-Performance Optimizations (Phase 4, Jan 2026)
core_affinity = "0.8"     # CPU core pinning
crossbeam-channel = "0.5" # Lock-free MPMC channels
crossbeam-queue = "0.3"   # Lock-free queues

# Observability (Jan 2026 Audit)
opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"
